--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="conteiner">
           <div class="hero-block">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">
+            <button type="button" class="hero-btn" data-modal-open>
               <span class="text-btn">Заказать услугу</span>
             </button>
           </div>
@@ -372,5 +372,13 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="btn-backdrop" data-modal-close><svg class="icon-backdrop">
+          <use href="./svg/sprite.svg#icon-close"></use>
+        </svg></button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
